; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_sdp.c_bta_hf_client_create_record.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_sdp.c_bta_hf_client_create_record.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i32 }
%struct.TYPE_6__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32, i32 }

@bta_hf_client_cb = common dso_local global %struct.TYPE_7__ zeroinitializer, align 8
@UUID_SERVCLASS_HF_HANDSFREE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_hf_client_create_record(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %3 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @bta_hf_client_cb, i32 0, i32 0), align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %21

5:                                                ; preds = %1
  %6 = call i64 (...) @SDP_CreateRecord()
  store i64 %6, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @bta_hf_client_cb, i32 0, i32 0), align 8
  %7 = call i32 (...) @BTM_AllocateSCN()
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @bta_hf_client_cb, i32 0, i32 1), align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @bta_hf_client_cb, i32 0, i32 1), align 8
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @bta_hf_client_cb, i32 0, i32 0), align 8
  %18 = call i32 @bta_hf_client_add_record(i32 %11, i32 %12, i32 %16, i64 %17)
  %19 = load i32, i32* @UUID_SERVCLASS_HF_HANDSFREE, align 4
  %20 = call i32 @bta_sys_add_uuid(i32 %19)
  br label %21

21:                                               ; preds = %5, %1
  ret void
}

declare dso_local i64 @SDP_CreateRecord(...) #1

declare dso_local i32 @BTM_AllocateSCN(...) #1

declare dso_local i32 @bta_hf_client_add_record(i32, i32, i32, i64) #1

declare dso_local i32 @bta_sys_add_uuid(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
